--- a/Angular/FossilCarSales/src/app/app.component.html
+++ b/Angular/FossilCarSales/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-new-fossil-car></app-new-fossil-car>
-<app-fossil-cars></app-fossil-cars>
+<app-new-fossil-car (carUpdate)="carUpdate()"></app-new-fossil-car>
+<app-fossil-cars (carUpdate)="carUpdate()"></app-fossil-cars>
