--- a/Angular/FossilCarSales/src/app/components/new-fossil-car/new-fossil-car.component.html
+++ b/Angular/FossilCarSales/src/app/components/new-fossil-car/new-fossil-car.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="carFormData" (ngSubmit)="onCarSubmit()" class="container-sm d-flex flex-column">
+<form [formGroup]="carFormData" (ngSubmit)="onCarSubmit()" class="container d-flex flex-column">
     <mat-form-field>
         <mat-label>Rank</mat-label>
         <input matInput type="text" formControlName="rank">
@@ -15,5 +15,6 @@
         <mat-label>changeQuantityPercent</mat-label>
         <input matInput formControlName="changeQuantityPercent">
     </mat-form-field>
-    <input type="submit" value="Submit" [disabled]="carFormData.invalid">
+    <button type="submit" class="btn btn-secondary" [disabled]="carFormData.invalid">Submit</button>
+
 </form>
