--- a/Angular/FossilCarSales/src/app/components/fossil-cars/fossil-cars.component.html
+++ b/Angular/FossilCarSales/src/app/components/fossil-cars/fossil-cars.component.html
@@ -15,7 +15,7 @@
                 <td>{{car.model}}</td>
                 <td>{{car.quantity}}</td>
                 <td>{{car.changeQuantityPercent}}</td>
-                <td><button class="btn btn-secondary" (click)="CarEdit(car)">&plus;</button></td>
+                <td><button class="btn btn-secondary" (click)="openDialog(car)">&plus;</button></td>
                 <td><button class="btn btn-secondary" (click)="CarDelete(car)">&minus;</button></td>
             </tr>
         </tbody>
