--- a/Angular/PopularECars/src/app/components/admin/fossil-car-admin/fossil-car-admin.component.html
+++ b/Angular/PopularECars/src/app/components/admin/fossil-car-admin/fossil-car-admin.component.html
@@ -15,8 +15,11 @@
                 <td>{{car.model}}</td>
                 <td>{{car.quantity}}</td>
                 <td>{{car.changeQuantityPercent}}</td>
+                <td><button class="btn btn-secondary" (click)="openDialog(car)">&plus;</button></td>
+                <td><button class="btn btn-secondary" (click)="CarDelete(car)">&minus;</button></td>
             </tr>
         </tbody>
     </table>
     <br>
+    <button (click)="CarReset()" class="btn btn-secondary">Reset Table</button>
 </div>
