--- a/Angular/PopularECars/src/app/app.component.html
+++ b/Angular/PopularECars/src/app/app.component.html
@@ -1,4 +1,17 @@
 <!-- <app-new-fossil-car (carUpdate)="carUpdate()"></app-new-fossil-car> -->
-<app-fossil-cars (carUpdate)="carUpdate()"></app-fossil-cars>
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Cars</a>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" routerLink="" ariaCurrentWhenActive="page">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" routerLink="/admin" ariaCurrentWhenActive="page">Admin</a>
+                </li>
+            </ul>
+    </div>
+</nav>
 <router-outlet></router-outlet>
+
+<!-- <app-fossil-cars></app-fossil-cars> -->
