--- a/Angular/PopularECars/src/app/app.component.html
+++ b/Angular/PopularECars/src/app/app.component.html
@@ -1,16 +1,22 @@
 <!-- <app-new-fossil-car (carUpdate)="carUpdate()"></app-new-fossil-car> -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Cars</a>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" routerLink="" ariaCurrentWhenActive="page">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" routerLink="/admin" ariaCurrentWhenActive="page">Admin</a>
-                </li>
-            </ul>
-    </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Cars</a>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="" ariaCurrentWhenActive="page">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="/admin" ariaCurrentWhenActive="page">Admin</a>
+      </li>
+    </ul>
+        <ul class="navbar-nav ">
+          <li class="nav-item">
+            <a class="nav-link active" href="#" (click)="tokenService.validateToken()? logout(): login()">{{ isLoggedIn? "Logout": "Login" }}</a>
+          </li>
+        
+        </ul>
+  </div>
 </nav>
 <router-outlet></router-outlet>
 
